# vending-machine-kata-cpp-tdd

./: .gitignore  CMakeLists.txt  CoinRegister.cpp  CoinRegister.h  CoinRegisterInterface.h  CoinRegisterInterfaceMock.cpp  CoinRegisterInterfaceMock.h  CoinRegisterInternalsTest.cpp  CoinRegisterTest.cpp  EmptyMain.cpp  ProductCatalog.h  ProductCatalogInterfaceMock.h  ProductCatalogTest.cpp  ProductTest.cpp  README.md  Speaker.cpp  Speaker.h  SpeakerTest.cpp  TestUtils.h  VendingMachine.cpp  VendingMachine.h  VendingMachineInternalsTest.cpp  VendingMachineTest.cpp
TestUtils/: CMakeLists.txt  CoinRegisterInterfaceMock.cpp  CoinRegisterInterfaceMock.h  CoinRegisterMock.cpp  CoinRegisterMock.h  ProductCatalogInterfaceMock.cpp  ProductCatalogInterfaceMock.h
VendingMachine/: CMakeLists.txt  CoinRegister.cpp  CoinRegister.h  CoinRegisterInterface.h  Product.cpp  Product.h  ProductCatalog.cpp  ProductCatalog.h  ProductCatalogInterface.h  VendingMachine.cpp  VendingMachine.h
VendingMachineAcceptanceTests/: CMakeLists.txt
VendingMachineAcceptanceTests/features/: AcceptCoins.feature
VendingMachineAcceptanceTests/features/step_definitions/: VendingMachineSteps.cpp  cucumber.wire
VendingMachineTests/: CMakeLists.txt  CoinRegisterTest.cpp  ProductCatalogTest.cpp  ProductTest.cpp  VendingMachineTest.cpp
features/: SelectProducts.feature  Speaker.feature  VendingMachine.feature
features/step_definitions/: SpeakerSteps.cpp  VendingMachineSteps.cpp
